🐛 fix: layout issue for small screens

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,14 @@
 .header {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   gap: 2rem;
-  margin: 2rem 0 4rem 0;
+  margin-top: 2rem;
+
+  @media all and (min-width: 600px) {
+    flex-direction: row;
+  }
 
   nav {
     display: flex;
