--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -2,7 +2,7 @@
   .buttons {
     display: flex;
     max-width: 40rem;
-    margin: 0 auto;
+    margin: 5rem auto;
 
     button {
       &:first-child {
