--- a/src/components/Watch/Watch.scss
+++ b/src/components/Watch/Watch.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 5rem auto;
+  margin: 0 auto;
   position: relative;
 
   @media all and (max-width: 414px) {
